# advent-of-code-2024

./: README.md  adventOfCode2024.cabal
src/: day01p1.hs  day01p2.hs  day02p1.hs  day02p2.hs  day03p1.hs  day03p2.hs  day04p1.hs  day04p2.hs  day05p1.hs
