name:		adventOfCode2024
version: 	1.0
cabal-version:	>= 1.6
description: 	Advent of Code Compilation
license: 	AllRightsReserved
license-file: 	LICENSE
copyright:
author:		Raul Gutierrez
maintainer: 	raguti@upv.es
build-type: 	Simple
stability:
homepage:
package-url:
synopsis:
category:
tested-with:
source-repository head
  type:     git
  location: https://github.com/raulgut/advent-of-code-2024.git

Executable day01p1
  buildable: True
  main-is: day01p1.hs
  build-depends: base
  hs-source-dirs: src

Executable day01p2
  buildable: True
  main-is: day01p2.hs
  build-depends: base, multiset
  hs-source-dirs: src

Executable day02p1
  buildable: True
  main-is: day02p1.hs
  build-depends: base
  hs-source-dirs: src

Executable day02p2
  buildable: True
  main-is: day02p2.hs
  build-depends: base
  hs-source-dirs: src

Executable day03p1
  buildable: True
  main-is: day03p1.hs
  build-depends: base, parsec
  hs-source-dirs: src

Executable day03p2
  buildable: True
  main-is: day03p2.hs
  build-depends: base, parsec
  hs-source-dirs: src
